--- a/fee/src/index.css
+++ b/fee/src/index.css
@@ -8,7 +8,6 @@
   /* background-color: #242424; */
   margin: 0;
   padding: 0;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,3 +18,145 @@ body{
   margin: 0;
   padding: 0;
 }
+
+.home-main {
+  width: 100%;
+  position: relative;
+  overflow-y: auto;
+  padding: 0 0 var(--padding-12xs);
+  box-sizing: border-box;
+  letter-spacing: normal;
+}
+
+.menuSection {
+  overflow-x: auto;
+  flex-shrink: 0;
+  gap: 93px 0;
+  max-width: 100%;
+  background-image: url(../../fee/src/assets/background1.jpg);
+}
+
+.top-main {
+  background-image: url(../../fee/src/assets/background1.jpg);
+  height: 50%;
+}
+
+.imageSlideshow {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: flex-start;
+  max-width: 100%;
+}
+
+.foodItem {
+  flex: 1;
+  align-items: center;
+  box-sizing: border-box;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+
+}
+.imageSlideshow {
+  /* width: 1440px; */
+  height: 810px;
+  background-color: var(--color-white);
+  overflow: hidden;
+  flex-direction: row;
+  align-items: flex-start;
+  text-align: left;
+  font-size: var(--font-size-31xl);
+  color: var(--color-white);
+  font-family: var(--font-inter);
+}
+
+.background-image {
+  width: 1440px;
+  height: 750px;
+  position: relative;
+  display: none;
+  max-width: 100%;
+}
+
+.foodCatalog {
+  max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-end;
+  max-width: 100%;
+  margin: 10% 20% 9% 20%;
+}
+
+.cataContainer {
+  margin: 0;
+  position: relative;
+  font-size: inherit;
+  font-style: italic;
+  font-weight: 600;
+  font-family: inherit;
+  z-index: 1;
+  width: 400px;
+}
+
+.title-main {
+  color: #ffffff;
+  font-size: 50px;
+}
+
+.pContainer {
+  margin: 0;
+  width: 942px;
+  position: relative;
+  font-size: var(--font-size-5xl);
+  display: inline-block;
+  font-style: italic;
+  font-weight: 300;
+  /* font-family: var(--font-montserrat); */
+  max-width: 100%;
+  z-index: 1;
+  margin: 0px 30%;
+}
+
+.pContainer p {
+  color: #ffffff;
+  font-size: 24px;
+}
+
+.rectangleParent:hover {
+  background-color: var(--color-red-100);
+}
+.orderFoodSection {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  max-width: 100%;
+  margin: 50px 0px 0px 65%;
+}
+
+.orderFoodSection button {
+  background-color: #FF0000;
+  width: 150px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.frameChild {
+  height: 50px;
+  width: 200px;
+  position: relative;
+  border-radius: var(--br-xl);
+  background-color: var(--color-red-200);
+  display: none;
+}
+
+.order-now {
+  position: relative;
+  font-size: var(--font-size-xl);
+  font-weight: 600;
+  font-family: var(--font-montserrat);
+  color: var(--color-white);
+  z-index: 1;
+}
+
